# loopnet

./: .gitignore  CONTRIBUTING.md  DATACARD.md  LICENSE  PLAN.md  PUBLISHING.md  README.md  SECURITY.md  STATUS.md  SYNC.md  V0.2-PLAN.md  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: community_records.md
.github/workflows/: hf-dataset-upload.yml  upload-hf.yml  validate-community.yml  validate.yml
data/captured/: README.md  code-repair-v1.jsonl  multi-agent-debate-v1.jsonl  research-synthesis-v1.jsonl
data/seed/: records.jsonl  splits.json
data/v0.2/: records.jsonl  splits.json
data/v0.3-preview/: README.md  dry-run-row.json
datasets/loopnet/: loopnet.py
examples/: v02_workflow.py
guides/: COMMUNITY-SUBMISSION.md  END-TO-END-TUTORIAL.md  LABELING-GUIDE.md
loopnet/: __init__.py  constants.py  les.py
notebooks/: baseline_failure_mode.ipynb
schema/: loopnet-record-v1.json  record-v0.3.json
scripts/: baseline_failure_mode.py  generate_seed.py  merge_corpus.py  prepare-commit-msg  upload_hf.py  validate_community.py  validate_record.py  validate_trace_export.py
submissions/community/: README.md
